Temporarily hiding old navbar, fixing alignment of links

--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -2,6 +2,8 @@
 @import "../styles/shortcuts"
 @import "../styles/_buttons"
 
+// NEWS BANNER
+
 .news-banner
   background-color: #4525D0
   color: #ffffff
@@ -18,9 +20,10 @@
   &:hover 
     background-color: #5641F2
 
+  // NAVIGATION MENU
+
 .nav__submenu 
   display: none
-
 
 .nav__menu-item:hover 
   .nav__submenu 
@@ -29,18 +32,14 @@
   
 $submenu-width: 100vw
 
-
 html 
   box-sizing: border-box
-
 
 *, *:before, *:after 
   box-sizing: border-box
 
-
 .menu-container 
   text-align: center
-
 
 nav 
   ul 
@@ -48,8 +47,6 @@ nav
     padding-left: 0
     margin-top: 0
     margin-bottom: 0
-  
-
 
 .nav 
   display: inline-block
@@ -65,12 +62,9 @@ nav
     line-height: inherit
     cursor: pointer
   
-
-  
 .nav__menu 
   line-height: 45px
   font-weight: 700
-
   
 .nav__menu-item 
   display: inline-block
@@ -80,7 +74,6 @@ nav
 
     .nav__submenu 
       display: flex
-
     
 .nav__submenu 
   font-weight: 300
@@ -96,15 +89,15 @@ nav
   left: 0
   box-shadow: rgba(9, 8, 24, 0.64) 0px 10px 20px 0px
   margin-top: 16px
-
     
 .nav__submenu-item 
   padding: 0 64px
 
 .menu-img
   margin-bottom: -8px
-  
 
+.navbar-trade
+  width: 140px
 
 
 .home-page
