--- a/src/styles/_nav.sass
+++ b/src/styles/_nav.sass
@@ -1,6 +1,9 @@
 @import "bulma/utilities/_all"
 @import "bulma/components/navbar"
 
+.old-navbar
+  display: none
+
 .navbar
   background-color: transparent
   +desktop
@@ -48,7 +51,7 @@
       box-sizing: content-box
 
   +desktop
-    margin-top: 50px
+    margin-top: 0px
   +tablet
     padding: 10px 20px
   +mobile
